--- a/src/주니어백엔드개발자가알면좋을실무지식/md/4장외부연동.md
+++ b/src/주니어백엔드개발자가알면좋을실무지식/md/4장외부연동.md
@@ -32,6 +32,34 @@ A서비스는 B서비스를 호출하는데 타임아웃 설정없이 B서비스
 호출 타임아웃: 총 응답 시간에 대한 타임아웃임. 
 호출 = 패킷들의 합
 
+http 요청에서의 타임아웃
+acquire time out: 커넥션 풀 획득에 필요한 시간, 커넥션 풀이 사용가능한게 없을 때는 문제가 될 수도 있다. 
+connection time out: 3 way handshake 하는 시간
+write time out: http 요청 메세지를 서버에 전송하는데 걸리는 시간, 커다란 메세지 보낼 때는 고려해야합니다.
+read time out: 요청에 대한 응답을 기다리는 시간 -> 이걸 소캣타임아웃과 호출 타임아웃으로 좀 더 세분화 할 수 있다. 
+
+보통은 서버와 클라이언트를 바로 연결하지 않고, 로드벨런스 방화벽 등을 거치게 되어서, 그 사이의 연결 시간을 타임아웃 설정을 해주는게 중요하다.
+
+
+statement time out은 쿼리 타임아웃 입니다. 
+
+
+connection time out에 대해서 생각해봄
+몇초일까? 보통은 100ms안으로 되는 것이 해피 케이스임. 
+
+RTT가 (syn, syn-ack 까지 )
+같은 region내(데이터 센터), 1~5ms
+서로다른 리전 :30~50
+대륙: 150~200
+일반적인 네트워크 환경 30~300ms
+
+1초 이내에 커넥션 타임아웃은 환료된다. 
+
+한번 맺기 전까지는 rtt를 알 수 없음. 그래서 리눅스는 default로 1초로 함. 
+initRTO(initial retransimission timeout) 1초로 고정값이 되어 있다. 
+
+재시도의 경우 기본 6회까지 합니다.
+
 ## 재시도
 간헐적인 늦음 현상이 생길수도 있다. 이럴 때 재시도를 통해서 성공시켜보자.
 
@@ -41,7 +69,7 @@ A서비스는 B서비스를 호출하는데 타임아웃 설정없이 B서비스
 
 ### 재시도 가능한 경우
 - 단순 조회 기능
-- 연결 타임아웃
+- 연결 타임아웃: 요청 자체가 안간 거라서 괜찮다. 
 - 멱등성을 가진 변경 기능
 
 그리고 같은 api라도 실패 원인에 따라서 재시도 요청을 해야한다.
@@ -51,7 +79,15 @@ A서비스는 B서비스를 호출하는데 타임아웃 설정없이 B서비스
 재시도 간격: 지수적으로 대기시간을 늘리면서 해볼 수 있다. 바로 연달아 하지만 말자.  
 
 만약 연동 서비스가 요청 폭풍으로 인해서 늦어진 상황인데 재시도를 계속해서 한다면 그것도 문제가 된다.
-그래서 연동 서비스의 상황과 체격을 고려해서 재시도 정책을 세워야 한다. 
+그래서 연동 서비스의 상황과 체격을 고려해서 재시도 정책을 세워야 한다.
+
+(exponential 지수적인)
+만약 서버가 여러개가 있다면, jitter값을 줘서 조금이라도 다른 시점에 재시도하도록 동시 요청을 분산하는것도 좋다. 
+
+지수적인 타임아웃을 사용하는 이유가 서버 부하를 경감시키기 위해서인데, 
+커넥션 타임아웃에도 지수백오프를 쓰는 것은 이유가 뭘까?
+
+저희 쪽에서도 안모이게 분산시키려고 쓰는 것이긴 하다.
 
 ## 동시요청 제한
 연동 서비스의 처리 한계량을 명확하게 알자. 그 이상은 보내지 말자. 
@@ -69,6 +105,8 @@ A서비스는 B서비스를 호출하는데 타임아웃 설정없이 B서비스
 
 서킷 브레이커가 열려있는 동안 연동 서비스가 과부하에서 벗어날 수 있기도 하다. 
 
+
+트레픽이 시간에 따라서 너무 변동하지 않는 이상 countBased가 나음.
 ## 외부 연동과 DB 연동 문제
 외부 연동 실패시 트렌젝션 롤백은 괜춘
 만약 읽기 타임아웃 실패시 트렌젝션 롤백은 이후 외부 api성공시를 고려해야함
