5장 비동기 연동

--- a/src/주니어백엔드개발자가알면좋을실무지식/md/5장비동기연동.md
+++ b/src/주니어백엔드개발자가알면좋을실무지식/md/5장비동기연동.md
@@ -1,8 +1,41 @@
 # 5장 비동기연동
+## 별도 스레드로 실행하기
 메인한 작업이 아니면 비동기로 처리해도 된다~
+
+### 롤백이 안되요
+순차적으로 호출해도 비동기면 -> 트랜잭션이 달라져서 롤백이 안됩니다.
 다만 비동기 작업은 메인 스레드의 트랜잭션 범위 밖에 있으니깐 이 점 유의해야함
 
-메세지 쏠 때는 db트렌젝션이 끝난 후에 쏘는 것이 좋다. 
+메세지 쏠 때는 db트렌젝션이 끝난 후에 쏘는 것이 좋다.
+
+전략 중에서는 스레드풀에 남는 스레드가 없으면 실행을 요청한 스레드에서 실행하는 것도 있다.
+이렇게 되면 간혈적으로 롤백이 될 수도 있지만 이거를 기대할 수는 없다. 
+
+## 가상 스레드 , 고루틴
+가상스레드를 계속 만들어서 사용하는 것임
+
+가상스레드를 사용할 때, synchronized를 사용하면 모니터락을 캐리어 스레드가 가지고 있어서 성능상의 이점을 가지지 못하게 됩니다.
+synchronized를 쓰면 실제 운영체제가 사용하고 있는 쓰레드를 고정해버려서, 성능상의 이점을 가지지 못한다. 
+pinning
+
+
+## 메세징 
+### 카프카
+카프카 -> 본사에서 메세지 쏘면 지사에서 다 받을 수 있도록 구축을 해봤다. 
+
+메세징 시스템을 사용하는 것은 느슨한 결합과 비동기 데이터를 동기화를 구현하는 대표적인 예시입니다.
+
+### rabbit mq
+유실 절대 발생하면 안되는 환경이라면 kafka 쓰자.
+
+
+카프카의 경우 메세지 자체가 작아서 부담이 별로 없을 것 같은데.
+
+db가 모든 병목의 출발점임 -> 처리량 관점에서 보면 차이가 많이 난다.
+
+카프카 자체도 한계가 있어서 더 뭔가를 만들려고 하고 있다.
+
+https://www.linkedin.com/blog/engineering/infrastructure/introducing-northguard-and-xinfra
 
 ## 트렌젝션 아웃박스 패턴
 메세지 데이터가 절대 유실되지 않는다. 
@@ -11,6 +44,7 @@
 
 ## 배치 전송
 (정산)데이터를 api가 아니라 파일로 하는 이유는 뭐지?
+
 
 ## CDC
 변경된 데이터를 추적하고 판별해서 데이터로 작업을 수행할 수 있도록 하는 소프트웨어 패턴
