--- a/src/주니어백엔드개발자가알면좋을실무지식/md/6장 서버와 동시 실행.md
+++ b/src/주니어백엔드개발자가알면좋을실무지식/md/6장 서버와 동시 실행.md
@@ -1,3 +1,16 @@
+# 동시성 문제의 큰 원인
+공유자원에 대한 여러 스레드의 동시 접근
+RaceCondition
+
+자주 쓰는 spring은 안전할까?
+
+bean은 싱글톤으로 만들어집니다. stateless하게 설계하기 때문에 멀티 스레드에서 안전
+
+# 동시성 제어 방법
+## 잠금을 이용한 접근 제어
+가상스레드에서 synchronized를 쓰려면 24부터 쓰면 됩니다. 
+
+
 많은 요청이 들어왔을 때, 동시에 처리하지 못하면 서버 성능에 장애가 생긴다.
 하지만 또 동시에 처리하면 데이터에 문제가 생길 수도 있다. 
 
@@ -31,6 +44,8 @@ Collections.synchronizedMap을 사용하면 동기화된 컬렉션 객체 생성
 #### 불변값 사용해보자. 
 
 ## DB와 동시성
+제약조건도 db의 동시성 처리중 하나이다!
+
 db가 없었다고 생각해봐. 특히 트랜잭션을 통해서 데이터 다루는 과정에서 발생할 다양한 동시성 문제를 처리 가능하다. 
 
 트렌젝션 안의 하나라도 실패하면 전체 롤백!
